2008-08-10  Zoltan Varga  <vargaz@gmail.com>

	* include/private/gc_locks.h: Add amd64 support so parallel mark works on
	amd64 too.

2008-08-05  Andreas Färber  <andreas.faerber@web.de>

	* autogen.sh: Suppress arguments warning for NOCONFIGURE.
	
	Contributed under MIT/X11 license.

2008-08-03  Zoltan Varga  <vargaz@gmail.com>

	* pthread_support.c (GC_thread_exit_proc): Null out the tls key to prevent the
	dtor function from being callled, since that would read freed memory.

2008-05-23  Massimiliano Mantione  <massi@ximian.com>
	* alloc.c: Moved emitting "GC_EVENT_START" and "GC_EVENT_END" events
	from "GC_maybe_gc" to "GC_try_to_collect_inner".

2008-05-19  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add two variables for passing CPPFLAGS/CFLAGS from the parent
	configure.

2008-04-28  Kornél Pál  <kornelpal@gmail.com>

	* include/gc.h: Add GC_DllMain.
	* win32_threads.c: Rename DllMain to GC_DllMain.

	Contributed under MIT/X11 license.

2008-04-15  Jonathan Chambers  <joncham@gmail.com>
	* include/private/gcconfig.h: Backport GC7 code to support Win64.
	* win32_threads.c: Backport GC7 code to support Win64.

2008-02-07  Massimiliano Mantione  <massi@ximian.com>
	* include/gc.h: (GCEventType): Added start-stop the world events.
	* pthread_stop_world.c: (GC_stop_world and GC_start_world): hooked
	start-stop the world events.

2007-11-05  Geoff Norton  <gnorton@novell.com>

	* darwin_stop_world.c: Correct the structure name on Darwin-x86 for Leopard.

2007-11-05  Geoff Norton  <gnorton@novell.com>

	* darwin_stop_world.c: Also push ebp when pushing all stacks on Leopard
	and pre-Leopard.

2007-11-01  Geoff Norton  <gnorton@novell.com>

	* darwin_stop_world.c:  Handle Leopards renaming of some structure
	members.

Mon Sep 24 16:15:47 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* include/private/gc_priv.h: increase the default MAX_HEAP_SECTS
	value (bug#314759, bug#324318).

Tue Sep 11 16:22:28 CEST 2007 Paolo Molaro <lupus@ximian.com>
